--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,4 @@
 {
     "singleQuote": true,
-    "printWidth": 80,
-    "editor.formatOnSave": true,
-    "proseWrap": "always",
-    "tabWidth": 2,
-    "requireConfig": false,
-    "useTabs": false,
-    "trailingComma": "none",
-    "bracketSpacing": false,
-    "jsxBracketSameLine": false,
-    "semi": true
-}
+    "trailingComma": "all"
+  }
